--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
 			<version>[1.0.0, 1.2.1]</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -89,6 +96,11 @@
 						</relocation>
 					</relocations>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19</version>
 			</plugin>
 		</plugins>
 	</build>
